@@ -1,3 +1,6 @@
+09 Apr 2008 coudercd
+ * permit user data file for pmkscan.
+
 24 Mar 2008 coudercd
  * better use of hash_get_processed() in codebuild.
  * fixed pkgconfig stuff in cases where dependencies can be missing.
